objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>* Additional Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent_Address__c</fullName>
        <label>Agent Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Email_Address__c</fullName>
        <label>Agent Email Address</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Image_URL__c</fullName>
        <description>Used to pull agents logo onto deal pdf</description>
        <label>Agent Image URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>123</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Names__c</fullName>
        <formula>Agents__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Phone__c</fullName>
        <label>Agent Phone</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agents__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To be used as a lookup for agents to generate deal pdf</description>
        <label>Agents</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal (Account)</relationshipLabel>
        <relationshipName>Deal1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocation_By_NZ__c</fullName>
        <label>Allocation By - NZ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deal</fullName>
                    <default>true</default>
                    <label>Deal</label>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
                <value>
                    <fullName>Sub option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allocation_by__c</fullName>
        <label>Allocation by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deal</fullName>
                    <default>true</default>
                    <label>Deal</label>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
                <value>
                    <fullName>Sub option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analyst_Deal_Option_Report__c</fullName>
        <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0K00000AOpm5/view?fv0=&quot;, 
&quot;/00O0K00000AOpm5?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Sales by Option Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Analyst Deal Option Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not_approved</fullName>
                    <label>Not Approved</label>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Submitter__c</fullName>
        <inlineHelpText>This is the email address of approval process submitter</inlineHelpText>
        <label>Approval Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Authorised_Merchant_Name__c</fullName>
        <description>Required to get the Signers name over from contact for esign</description>
        <label>Authorised Merchant Name</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorised_Merchant_Phone__c</fullName>
        <label>Authorised Merchant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BDM_Allocation_Report__c</fullName>
        <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0K00000AOmWT/view?fv0=&quot;, 
&quot;/00O0K00000AOmWT?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Allocation Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDM Allocation Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM_Deal_Snapshot__c</fullName>
        <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0K00000AXKyl/view?fv0=&quot;, 
&quot;/00O0K00000AXKyl?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Deal Snapshot&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDM Deal Snapshot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM_Dep_City_Report__c</fullName>
        <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0K00000AOpjk/view?fv0=&quot;, 
&quot;/00O0K00000AOpjk?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Sales by Dep City Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Analyst Dep City Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM_Escape_Nights_Sold_Report__c</fullName>
        <formula>IF(
 
OR( Is_Escapes__c , show_as_escape__c ,INCLUDES( deal_type__c , &apos;stay&apos;),INCLUDES( deal_type_nz__c , &apos;stay&apos;)  ), 

(HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0K00000AkVIu/view?fv0=&quot;, 
&quot;/00O0K00000AkVIu?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Escape Nights Sold/Hold Report&quot;)),

&quot;Report Not Available for this Deal&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDM Escape Nights Sold Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM_Merchant_Sales_Overview__c</fullName>
        <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0K000009sxnS/view?fv0=&quot;, 
&quot;/00O0K000009sxnS?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Merchant Overview Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDM Merchant Sales Overview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM_Sales_Report__c</fullName>
        <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0K00000A4vS4/view?fv0=&quot;, 
&quot;/00O0K00000A4vS4?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Sales Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDM Sales Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM__c</fullName>
        <label>BDM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maite De Hedervary</fullName>
                </value>
                <value>
                    <fullName>Silvia Magnani</fullName>
                </value>
                <value>
                    <fullName>Amanda Tennant</fullName>
                </value>
                <value>
                    <fullName>Teige O&apos;Sullivan</fullName>
                </value>
                <value>
                    <fullName>Rachel Sutherland</fullName>
                </value>
                <value>
                    <fullName>Ian Hunter</fullName>
                </value>
                <value>
                    <fullName>Alison Riordan</fullName>
                </value>
                <value>
                    <fullName>Alexandra Chakos</fullName>
                </value>
                <value>
                    <fullName>Lauren Tsitos</fullName>
                </value>
                <value>
                    <fullName>Emmylou Stockbridge</fullName>
                </value>
                <value>
                    <fullName>Derek Test Dolan</fullName>
                </value>
                <value>
                    <fullName>Chaiy Donati</fullName>
                </value>
                <value>
                    <fullName>Lewis Tait</fullName>
                </value>
                <value>
                    <fullName>Troy Rosee</fullName>
                </value>
                <value>
                    <fullName>Eamonn O&apos;Sullivan</fullName>
                </value>
                <value>
                    <fullName>Cameron Williams</fullName>
                </value>
                <value>
                    <fullName>Gemma Burnham</fullName>
                    <isActive>false</isActive>
                    <label>Gemma Burnham</label>
                </value>
                <value>
                    <fullName>Jorden Krause</fullName>
                    <isActive>false</isActive>
                    <label>Jorden Krause</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Book_By__c</fullName>
        <label>Book By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Book_By_nz__c</fullName>
        <label>Book By - NZ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Instructions_Address__c</fullName>
        <label>Booking Instructions(Address)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Instructions_Name__c</fullName>
        <label>Booking Instructions(Name)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Instructions_Stay_NZ__c</fullName>
        <label>Booking Instructions (Stay) - NZ</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Booking_Instructions_Stay__c</fullName>
        <label>Booking Instructions(Stay)</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Booking_Instructions_URL__c</fullName>
        <label>Booking Instructions URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Booking_form_URL__c</fullName>
        <label>Booking form URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_Age_Disclaimer_NZ__c</fullName>
        <defaultValue>&quot;Children Aged 11 Years and under at time of travel.&quot;</defaultValue>
        <label>Child Age Disclaimer - NZ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_age_disclaimer__c</fullName>
        <defaultValue>&quot;Childern Aged 11 Years and under at time of travel.&quot;</defaultValue>
        <label>Child age disclaimer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closest_Partner_Real_End_Date__c</fullName>
        <label>Closest Partner Real End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closest_Partner_Sharing_Deadline__c</fullName>
        <label>Closest Partner Sharing Deadline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_No_Of_Days_Live__c</fullName>
        <formula>TODAY() -  Deal_Open_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count No Of Days Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_NZ__c</fullName>
        <label>Country - NZ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Deps</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bali</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Borneo</fullName>
                </value>
                <value>
                    <fullName>Bosnia Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Deps</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bali</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Borneo</fullName>
                </value>
                <value>
                    <fullName>Bosnia Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cruise_Cabin_Allocation_Status_NZ__c</fullName>
        <label>Cruise Cabin Allocation Status - NZ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cruise_Cabin_Allocation_Status__c</fullName>
        <label>Cruise Cabin Allocation Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cruise_Cabin_Booked_by__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unsecured</fullName>
                    <default>true</default>
                    <label>Unsecured</label>
                </value>
                <value>
                    <fullName>Secured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cruise_Cabin_Booked_by_NZ__c</fullName>
        <label>Cruise Cabin Booked by - NZ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cruise_Cabin_Booked_by__c</fullName>
        <label>Cruise Cabin Booked by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TAD</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGmaac__c</fullName>
        <formula>(((Total_Marketing_Spend__c/0.065)*(Estimated_Margin__c))/(Total_Marketing_Spend__c/0.065)*100)-((Total_Marketing_Spend__c/Total_Revenue_AU__c)*100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentGmaac</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dates_Flights__c</fullName>
        <label>Dates Flights</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dates/Domestic Flights</fullName>
                </value>
                <value>
                    <fullName>Dates/International Flights</fullName>
                </value>
                <value>
                    <fullName>Dates/No Flights</fullName>
                </value>
                <value>
                    <fullName>No Dates/No Flights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Nights_NZ__c</fullName>
        <label>Days/Nights - NZ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Nights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Nights__c</fullName>
        <label>Days/Nights</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Nights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_until_exhausted__c</fullName>
        <formula>Total_Remaining_Allocations__c /  Rate_of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days until exhausted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DealPDF3Portal__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=a4C0K000000D9iJ&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; &quot; +  Agents__c + 
&quot;&amp;queryid=[TCDealItinerary]a4428000000E87L,[TCItinerary]a440K000001R5co,[TCOptions1]a4428000000E8Br,[TCSubOptions1]a4428000000E8CG,[DepartureDate]a4428000000YycL,[TCCity]a4428000000YycG,[TourInclusions]a4428000000YycV,[Media]a4428000000Yyca,[Dealpdf]a4428000000Yycu?pv0=&quot; + Agents__r.Acct_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DealPDF3Portal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Card__c</fullName>
        <label>Deal Card</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deal_Draft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Draft</label>
        <referenceTo>Deal_Draft__c</referenceTo>
        <relationshipLabel>Deal</relationshipLabel>
        <relationshipName>Deal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Estimated_Margin__c</fullName>
        <formula>IF(Total_Sales__c &gt; 0, Deal_Estimated_Profit__c / Total_Sales__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Estimated Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Estimated_Profit__c</fullName>
        <formula>Total_Sales__c  - Total_Marketing_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Estimated Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_ID_Title__c</fullName>
        <formula>IF( ISBLANK(title__c) , 
Name&amp;&quot;-&quot;&amp;title_nz__c , 
Name&amp;&quot;-&quot;&amp;title__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal ID &amp; Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <label>TYPE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>travel</fullName>
                </value>
                <value>
                    <fullName>cruise</fullName>
                </value>
                <value>
                    <fullName>stay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Margin_Check__c</fullName>
        <formula>IF(
Deal_Estimated_Margin__c &gt;= 0.20,
IMAGE(
&quot;/resource/1535695465000/GraphicsPackNew/fatcow/farmfresh/16/flag_green.png&quot; ,
&quot;Rating Level&quot;

),
IMAGE(
&quot;/resource/1535695465000/GraphicsPackNew/fatcow/farmfresh/16/flag_red.png&quot; ,
&quot;Rating Level&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Margin % Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Open_Date__c</fullName>
        <description>Used to count the number of day that a field is live on site for</description>
        <label>Deal Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_PDF2__c</fullName>
        <description>Used to attach a deal type PDF to a deal record which can be accessed from TC portal</description>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;templateid=a4C0K000000D9iJ&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;qmode=Attachments&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; &quot; + Agents__c + 
&quot;&amp;queryid=[TCItinerary]a4428000000E87Q,[TCOptions1]a4428000000E8Br,[TCSubOptions1]a4428000000E8CG,[TourInclusions]a4428000000YycV,[Dealpdf]a4428000000Yycu?pv0=&quot; + Agents__r.Acct_ID__c</formula>
        <label>Deal PDF-TC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Rating_Stars__c</fullName>
        <formula>IF(
 Deal_Estimated_Margin__c &gt;= 0.25, 
 IMAGE(
        &quot;/img/samples/stars_&quot; + &quot;5&quot; + &quot;00.gif&quot;,
        &quot;Rating Level&quot;
    ),
IF(
Deal_Estimated_Margin__c &gt;= 0.23, 
 IMAGE(
        &quot;/img/samples/stars_&quot; + &quot;4&quot; + &quot;00.gif&quot;,
        &quot;Rating Level&quot;
    ),
IF(
Deal_Estimated_Margin__c &gt;= 0.20, 
 IMAGE(
        &quot;/img/samples/stars_&quot; + &quot;3&quot; + &quot;00.gif&quot;,
        &quot;Rating Level&quot;
    ),
IF(
Deal_Estimated_Margin__c &gt;= 0.16, 
 IMAGE(
        &quot;/img/samples/stars_&quot; + &quot;2&quot; + &quot;00.gif&quot;,
        &quot;Rating Level&quot;
    ),
IF(
Deal_Estimated_Margin__c &gt; 0.11, 
 IMAGE(
        &quot;/img/samples/stars_&quot; + &quot;1&quot; + &quot;00.gif&quot;,
        &quot;Rating Level&quot;
    ),
IMAGE(
        &quot;/img/samples/stars_&quot; + &quot;0&quot; + &quot;00.gif&quot;,
        &quot;Rating Level&quot;
    )
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This shows the deal star rating based on a scale of 1 (low) - 5 (excellent). This is calculated on the estimated deal margin percentage.  5 stars is &gt;= 25% 4 stars is 23%-24% 3 stars is 20-22%-2  2 stars is 16%-19% 1 star is 11%-15% 0 stars is 0%-10%</inlineHelpText>
        <label>Deal Rating Stars</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Revenue_Actual__c</fullName>
        <inlineHelpText>This is the actual profit provided by Finance.</inlineHelpText>
        <label>Deal Revenue $ Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Status__c</fullName>
        <inlineHelpText>This field drives the status in the &quot;path&quot; at the top of the page to show the &quot;overall status&quot; of the deal.</inlineHelpText>
        <label>Deal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BDM - Deal Draft In Progress</fullName>
                    <default>true</default>
                    <label>BDM - Deal Draft In Progress</label>
                </value>
                <value>
                    <fullName>BDM - Submitted</fullName>
                </value>
                <value>
                    <fullName>Plan &amp; Configure</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>With_Publishing</fullName>
                    <label>With Publishing</label>
                </value>
                <value>
                    <fullName>Ready for Proofing</fullName>
                </value>
                <value>
                    <fullName>Pre-Published</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                    <color>#57F17C</color>
                    <label>Published</label>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Analysis &amp; Approval</fullName>
                    <isActive>false</isActive>
                    <label>Analysis &amp; Approval</label>
                </value>
                <value>
                    <fullName>BDM</fullName>
                    <isActive>false</isActive>
                    <label>BDM</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                    <isActive>false</isActive>
                    <label>Marketing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_related_component_cost__c</fullName>
        <description>Created by Rollup Helper</description>
        <label>Deal related component cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_with_Age_Grouping__c</fullName>
        <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;, 
&quot;#/sObject/00O0K00000AOqJd/view?fv0=&quot;, 
&quot;/00O0K00000AOqJd?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Deal with Age Grouping Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal with Age Grouping Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_Book_By_End_Date_of_Deal__c</fullName>
        <inlineHelpText>Please select the date you would like the deal to end.</inlineHelpText>
        <label>Desired Book By (end date of deal)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Publish_Date__c</fullName>
        <inlineHelpText>Please indicate the date you would like to be the start date of the deal.</inlineHelpText>
        <label>Desired Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diamond_deal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in TC portal</description>
        <label>Diamond deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_TC_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable TC Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Merchant_Confirmations__c</fullName>
        <label>Email - Merchant Confirmations</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Escape_Confirmation__c</fullName>
        <description>This will be included on customer confirmation emails</description>
        <inlineHelpText>This will be included on customer confirmation emails</inlineHelpText>
        <label>Escape Confirmation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Estimated_Margin_NZ__c</fullName>
        <label>Estimated Lead-In Margin - NZ</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_Margin__c</fullName>
        <label>Estimated Lead-In Margin</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_Weighted_Margin_NZ__c</fullName>
        <label>Estimated Weighted Margin - NZ</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>